@@ -116,6 +116,8 @@ AC_SCOREP_ERROR_CODES
 AC_SCOREP_RUNTIME_MANAGEMENT_TIMINGS
 # </AC_SCOREP_COMMON_CHECKS>
 
+AS_IF([test "x${ac_scorep_platform}" = "xbgq"],
+    [SCOREP_PAMI])
 AC_SCOREP_RUNTIME_MANAGEMENT_TIMINGS 
 AC_SCOREP_COMPILER_INSTRUMENTATION_FLAGS
 AC_SCOREP_BACKEND_TEST_RUNS
